{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 151,
  "lineage": "052c4dc5-be30-6be9-e6f6-987e33b2b35e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sit_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474ac020852b87a9",
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:instance/i-09b10f9ac44a4cb8b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b10f9ac44a4cb8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "SIT-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff07df076621dc73",
            "private_dns": "ip-10-0-0-6.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.6",
            "public_dns": "ec2-13-215-75-38.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.75.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05edf16f58885d31b",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084490aa6a4b7cbb0",
            "tags": {
              "Name": "SIT-Server"
            },
            "tags_all": {
              "Name": "SIT-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0455eceedaf344c46"
            ]
          },
          "dependencies": [
            "aws_security_group.control-server",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:internet-gateway/igw-0ba92217d78ec2d8a",
            "id": "igw-0ba92217d78ec2d8a",
            "owner_id": "891377130731",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-igw"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-igw"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ba92217d78ec2d8a",
            "id": "r-rtb-006824378cd13b7d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006824378cd13b7d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:route-table/rtb-04aa872741bd1d5b5",
            "id": "rtb-04aa872741bd1d5b5",
            "owner_id": "891377130731",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private1-web-ap-southeast-1a"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private1-web-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:route-table/rtb-073361afee88dbda4",
            "id": "rtb-073361afee88dbda4",
            "owner_id": "891377130731",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-078c23f64dbd9e7c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private2-app-ap-southeast-1a"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private2-app-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:route-table/rtb-0e91aaac5c43e6572",
            "id": "rtb-0e91aaac5c43e6572",
            "owner_id": "891377130731",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private1-web-ap-southeast-1b"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private1-web-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:route-table/rtb-06a8123bdde7cb3ad",
            "id": "rtb-06a8123bdde7cb3ad",
            "owner_id": "891377130731",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-078c23f64dbd9e7c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private2-app-ap-southeast-1b"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private2-app-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:route-table/rtb-0fc8550a6e5d336f8",
            "id": "rtb-0fc8550a6e5d336f8",
            "owner_id": "891377130731",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private-db-ap-southeast-1a"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-rtb-private-db-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:route-table/rtb-006824378cd13b7d8",
            "id": "rtb-006824378cd13b7d8",
            "owner_id": "891377130731",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba92217d78ec2d8a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-rtb-public1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-rtb-public1"
            },
            "timeouts": null,
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4f95a158887773c",
            "route_table_id": "rtb-04aa872741bd1d5b5",
            "subnet_id": "subnet-09a83c05a40d4baea"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.private_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0530453c884072122",
            "route_table_id": "rtb-073361afee88dbda4",
            "subnet_id": "subnet-0dec9e1a1da3bf1b7"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.private_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e39671eb55526da7",
            "route_table_id": "rtb-0fc8550a6e5d336f8",
            "subnet_id": "subnet-0b4976b86f1cb04dc"
          },
          "dependencies": [
            "aws_route_table.private_c",
            "aws_subnet.private_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077f2073b4a8e7d15",
            "route_table_id": "rtb-0e91aaac5c43e6572",
            "subnet_id": "subnet-0a6c9e74b9bab67d1"
          },
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.private_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c279c3571f7c57f",
            "route_table_id": "rtb-06a8123bdde7cb3ad",
            "subnet_id": "subnet-033883ff34e9986ab"
          },
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.private_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae39078d3c4dff6d",
            "route_table_id": "rtb-0fc8550a6e5d336f8",
            "subnet_id": "subnet-01fe4b43ea82a2751"
          },
          "dependencies": [
            "aws_route_table.private_c",
            "aws_subnet.private_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e85275cddb577287",
            "route_table_id": "rtb-006824378cd13b7d8",
            "subnet_id": "subnet-084490aa6a4b7cbb0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7f612dba6ceadd",
            "route_table_id": "rtb-006824378cd13b7d8",
            "subnet_id": "subnet-04ecdda268ddffe26"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:security-group/sg-0455eceedaf344c46",
            "description": "Allow SSH, HTTP, and Minikube traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0455eceedaf344c46",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.215.75.38/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "219.74.119.125/32",
                  "116.86.127.142/32",
                  "121.7.129.81/32",
                  "116.89.55.205/32",
                  "154.205.16.99/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "219.74.119.125/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "219.74.119.125/32"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "control-server-security-group",
            "name_prefix": "",
            "owner_id": "891377130731",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis-cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:security-group/sg-064a3729bdb4e32d4",
            "description": "Allow redis cache traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064a3729bdb4e32d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.6/32",
                  "10.0.176.0/27",
                  "10.0.160.0/27"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-cache-security-group",
            "name_prefix": "",
            "owner_id": "891377130731",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:subnet/subnet-09a83c05a40d4baea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.128.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a83c05a40d4baea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377130731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private1-web-ap-southeast-1a",
              "kubernetes.io/cluster/web-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private1-web-ap-southeast-1a",
              "kubernetes.io/cluster/web-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:subnet/subnet-0dec9e1a1da3bf1b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.160.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dec9e1a1da3bf1b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377130731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private2-app-ap-southeast-1a",
              "kubernetes.io/cluster/app-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private2-app-ap-southeast-1a",
              "kubernetes.io/cluster/app-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:subnet/subnet-0b4976b86f1cb04dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.200.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4976b86f1cb04dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377130731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private3-db-ap-southeast-1a",
              "kubernetes.io/cluster/db-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private3-db-ap-southeast-1a",
              "kubernetes.io/cluster/db-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:subnet/subnet-0a6c9e74b9bab67d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.144.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6c9e74b9bab67d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377130731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private1-web-ap-southeast-1b",
              "kubernetes.io/cluster/web-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private1-web-ap-southeast-1b",
              "kubernetes.io/cluster/web-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:subnet/subnet-033883ff34e9986ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.176.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033883ff34e9986ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377130731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private2-app-ap-southeast-1b",
              "kubernetes.io/cluster/app-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private2-app-ap-southeast-1b",
              "kubernetes.io/cluster/app-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:subnet/subnet-01fe4b43ea82a2751",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.201.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fe4b43ea82a2751",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377130731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private3-db-ap-southeast-1b",
              "kubernetes.io/cluster/db-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-subnet-private3-db-ap-southeast-1b",
              "kubernetes.io/cluster/db-cluster-1": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:subnet/subnet-084490aa6a4b7cbb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084490aa6a4b7cbb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377130731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-subnet-public1-ap-southeast-1a",
              "kubernetes.io/cluster/app-cluster-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-subnet-public1-ap-southeast-1a",
              "kubernetes.io/cluster/app-cluster-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:subnet/subnet-04ecdda268ddffe26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ecdda268ddffe26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377130731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-subnet-public2-ap-southeast-1b",
              "kubernetes.io/cluster/app-cluster-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-subnet-public2-ap-southeast-1b",
              "kubernetes.io/cluster/app-cluster-1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-049490fc47c63ba76"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377130731:vpc/vpc-049490fc47c63ba76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000713ef81dedf428",
            "default_route_table_id": "rtb-052e4d809be8bb827",
            "default_security_group_id": "sg-03836565b1f0a2649",
            "dhcp_options_id": "dopt-08833eba3e12d8c4c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049490fc47c63ba76",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052e4d809be8bb827",
            "owner_id": "891377130731",
            "tags": {
              "Environment": "devtoprd",
              "Name": "my-vpc-va3.0"
            },
            "tags_all": {
              "Environment": "devtoprd",
              "Name": "my-vpc-va3.0"
            }
          }
        }
      ]
    }
  ]
}